translating the note.

--- a/notes/index.html
+++ b/notes/index.html
@@ -169,11 +169,29 @@ Our World In Data
 انتخاب: مردم سعی می‌کنند از قهرمانان و بزرگان پیروی کنند و رفتار و باورهای آنها را اختیار کنند.
 </p>
 
-<p>(Note: this is <em>not</em> quite Richard Dawkin's "meme" theory. "Meme" implies, that, like genes, ideas come in discrete chunks &amp; replicate with high fidelity. This is obviously untrue. Also you can't say "meme" with a straight face these days, so whatever)</p>
+<p>
+<!-- 
+(Note: this is <em>not</em> quite Richard Dawkin's "meme" theory. "Meme" implies, that, like genes, ideas come in discrete chunks &amp; replicate with high fidelity. This is obviously untrue. Also you can't say "meme" with a straight face these days, so whatever)
+-->
+(یادداشت: این همان تئوری «میم» ریچارد داوکینز نیست، که مانند ژنها، ایده‌ها به هم به صورت تکه‌های گسسته می‌آیند و با دقت بالا کپی می‌شوند.)
+</p>
 
-<p>The reason why I think Cultural Evolution is so promising, is that it could integrate <em>all</em> the human sciences: psychology, sociology, economics, anthropology, political science, neuroscience, biology. The greatest problems of our time do not obey conventional academic boundaries -- so, it's about dang time we created a common language between the sciences and humanities.</p>
+<p>
+<!-- 
+The reason why I think Cultural Evolution is so promising, is that it could integrate <em>all</em> the human sciences: psychology, sociology, economics, anthropology, political science, neuroscience, biology. The greatest problems of our time do not obey conventional academic boundaries -- so, it's about dang time we created a common language between the sciences and humanities.
+--> 
+دلیلی که من فکر می‌کنم تکامل فرهنگی امیدوار کننده است این است که ممکن است همه علوم انسانی را در خود ادغام کند: روانشناسی، جامعه‌شناسی، اقتصاد، مردم‌شناسی، علوم سیاسی، علوم اعصاب، بیولوژی. 
+بزرگترین مسائل زمان ما کاری به مرزهای سنتی آکادمیک ندارند -- در نتیجه زمان بسیار مناسبی است که زبانی مشترک بین علوم و علوم انسانی اختیار شود. 
+</p>
 
-<p>If you want to learn more about Cultural Evolution Theory, I highly recommend Joseph Heinlich's 2015 book, <a href="http://press.princeton.edu/titles/10543.html">The Secret of Our Success</a>!</p>
+<p>
+<!-- 
+If you want to learn more about Cultural Evolution Theory, I highly recommend Joseph Heinlich's 2015 book, <a href="http://press.princeton.edu/titles/10543.html">The Secret of Our Success</a>!
+-->
+اگر دوست دارید بیشتر درباره نظریه تکامل فرهنگی بدانید، کتاب Joseph Heinlich، 
+<a href="http://press.princeton.edu/titles/10543.html">The Secret of Our Success</a>
+را به شما سفارش می‌کنم. 
+</p>
 
 <h3>"[Always Cheat's] exploitativeness was its downfall"</h3>
 
