--- a/notes/index.html
+++ b/notes/index.html
@@ -193,21 +193,63 @@ If you want to learn more about Cultural Evolution Theory, I highly recommend Jo
 را به شما سفارش می‌کنم. 
 </p>
 
-<h3>"[Always Cheat's] exploitativeness was its downfall"</h3>
+<h3>
+<!-- 
+"[Always Cheat's] exploitativeness was its downfall"
+-->
+«رفتار استثمارگرایانهٔ همیشه متقلب باعث سقوطش است»
+</h3>
 
-<p>You may have heard that someone found a player strategy that can "exploit evolution". From the <a href="https://www.scientificamerican.com/article/game-theory-calls-cooperation-into-question1/">Scientific American</a>: "[Press &amp; Dyson's results] suggested the best strategies were selfish ones that led to extortion, not cooperation."</p>
+<p>
+<!-- 
+You may have heard that someone found a player strategy that can "exploit evolution". From the <a href="https://www.scientificamerican.com/article/game-theory-calls-cooperation-into-question1/">Scientific American</a>: "[Press &amp; Dyson's results] suggested the best strategies were selfish ones that led to extortion, not cooperation."
+-->
 
-<p>Press &amp; Dyson's findings <em>are</em> really important, but Scientific American confused two different uses of the word "evolutionary". The first use, the way this interactive guide used it, was to mean that the <em>tournament's population</em> changes over time. The second use, the way P&amp;D meant it, was that the <em>player's rules</em> changes over time. For example: Detective is "evolutionary" since it changes its own rules, while Copycat is <em>not</em> "evolutionary" since it sticks to its principles.</p>
+ممکن است شنیده‌باشید که بعضی ادعا می‌کنند که استراتژی پیدا شده که از تکامل به نفع خودش بهره می‌برد. در 
+<a href="https://www.scientificamerican.com/article/game-theory-calls-cooperation-into-question1/">Scientific American</a>: "[Press &amp; Dyson's results] 
+پیشنهاد داده‌اند که بهترین استراتژی‌ها خودخواهانه بودند که به زیاده‌خواهی می‌انجامیدند نه همکاری. 
+</p>
 
-<p>So, P&amp;D found strategies that could exploit "evolutionary" <em>players</em> like Detective, but their strategies <em>still could not exploit the evolution of the tournament</em>, because in the long run, fair &amp; nice strategies still win. </p>
+<p>
+<!-- Press &amp; Dyson's findings <em>are</em> really important, but Scientific American confused two different uses of the word "evolutionary". The first use, the way this interactive guide used it, was to mean that the <em>tournament's population</em> changes over time. The second use, the way P&amp;D meant it, was that the <em>player's rules</em> changes over time. For example: Detective is "evolutionary" since it changes its own rules, while Copycat is <em>not</em> "evolutionary" since it sticks to its principles.-->
+یافته‌های 
+Press &amp; Dyson
+واقعاً مهم هستند، اما 
+Scientific American 
+دو استفاده مختلف کلمه «تکاملی» را با هم قاطی کرده است. 
+در استفاده اول، که این راهنمای تعاملی استفاده کرده، به این معنی است که جمعیت و ترکیب جمعیتی در طول زمان تغییر می‌کند.
+معنی دوم که  مورد نظر 
+P&amp;D 
+بوده، قاعده بازی بازیکن با زمان تغییر می‌کرده. به عنوان مثال، کارآگاه استراتژی تکاملی راد (اینجا یکی از جاهایی هست که لغت تکامل ترجمه مناسبی برای evolution نیست! مترجم)، روش بازیش را تغییر می‌دهد، 
+درحالیکه مقلد استراتژی تکاملی ندارد، از اول تا آخر بازی به اصولش وفادار می‌ماند. 
+</p>
 
-<h3>"We have fewer friends -- period."</h3>
+<p>
+بنابراین 
+P&amp;D 
+استراتژی‌هایی را پیدا کرند که می‌توانند از بازیکن‌هایی مثل کارآگاه بهره‌کشی کنند، اما با این حال، در بلند مدت، باز هم استراتژی‌های خوب وجوانمردانه پیروز هستند. 
+</p>
 
-<p>Seriously, go read Robert Putnam's 2000 book, <a href="http://bowlingalone.com/">Bowling Alone</a>. Yeah it's a bit outdated by now, 17 years later, but its core findings and lessons are still true as ever -- probably even more so.</p>
+<h3>
+<!-- "We have fewer friends -- period." -->
+«ما دوستان کمتری داریم -- نقطه.»
+</h3>
 
-<h3>"Non-zero-sum game" / "Win-Win"</h3>
+<p>
+به کتاب 
+Robert Putnam (2000) 
+یک سری بزنید،
+<a href="http://bowlingalone.com/">Bowling Alone</a>. 
+آره، یک کم قدیمی است، ۱۷ سال، اما یافته‌های اصلی و آموزه‌هایش هنوز برقرار هستند -- و احتمالا برای همیشه برقرار خواهند بود. 
+</p>
 
-<p>This is kinda cheesy, but I still adore the 1989 book, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> -- especially Habit #4: Think Win-Win.</p>
+<h3>
+<!-- "Non-zero-sum game" / "Win-Win" -->
+«بازی با جمع غیر صفر» \ «بردبرد»
+</h3>
+
+<p>
+This is kinda cheesy, but I still adore the 1989 book, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> -- especially Habit #4: Think Win-Win.</p>
 
 <p>Because, contrary to popular belief, coming up with Win-Win solutions is hard, takes lots of effort, and is emotionally painful. Heck, I'd go even further – I'd say our culture's default stance of Win-Lose "us versus them" is the easy path, the lazy path, the equivalent of activism junk food.</p>
 
