translating the note.

--- a/notes/index.html
+++ b/notes/index.html
@@ -249,35 +249,88 @@ Robert Putnam (2000)
 </h3>
 
 <p>
-This is kinda cheesy, but I still adore the 1989 book, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> -- especially Habit #4: Think Win-Win.</p>
+این یک کم رو حوضی است، اما کتاب 
+<a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a>
+تحسین می‌کند -- خصوصاً خصلت شماره ۴: برد-برد فکر کنید.
+<!-- This is kinda cheesy, but I still adore the 1989 book, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> -- especially Habit #4: Think Win-Win.
+-->
+</p>
 
-<p>Because, contrary to popular belief, coming up with Win-Win solutions is hard, takes lots of effort, and is emotionally painful. Heck, I'd go even further – I'd say our culture's default stance of Win-Lose "us versus them" is the easy path, the lazy path, the equivalent of activism junk food.</p>
+<p>
+<!-- Because, contrary to popular belief, coming up with Win-Win solutions is hard, takes lots of effort, and is emotionally painful. Heck, I'd go even further – I'd say our culture's default stance of Win-Lose "us versus them" is the easy path, the lazy path, the equivalent of activism junk food. -->
+برخلاف باور عمومی، پیدا کردن راه حل برد-برد دشوار است، زحمت دارد و از نظر احساسی دردناک است. حتی می‌توان گفت که پیش‌فرض فرهنگ ما برد-باخت، راه آسان و راحت است.
+</p>
 
-<p>Anyway. Exaggerations aside, I strongly believe "Win-Win" / "Non-Zero-Sum" is something we all urgently need -- in our personal lives, social lives, and <em>definitely</em> political lives.</p>
+<p>
+<!-- Anyway. Exaggerations aside, I strongly believe "Win-Win" / "Non-Zero-Sum" is something we all urgently need -- in our personal lives, social lives, and <em>definitely</em> political lives. -->
+از مبالغه که بگذریم، من به شدت اعتقاد دارم که «برد-برد» \ «بازی با جمع غیر صفر» چیزی است که ما به آن نیاز مبرم داریم. -- در زندگی شخصی، در زندگی اجتماعی و خصوصاً در زندگی سیاسی.
+</p>
 
-<h3>"Copykitten"</h3>
+<h3>
+<!-- "Copykitten" -->
+مقلد مهربان
+</h3>
 
-<p>Just like how Copycat's original name was Tit For Tat, Copykitten's original name is <em>Tit For Two Tats</em>. Same rule: Cooperate, unless the other players cheats <em>twice</em> in a row.</p>
+<p>
+<!-- Just like how Copycat's original name was Tit For Tat, Copykitten's original name is <em>Tit For Two Tats</em>. Same rule: Cooperate, unless the other players cheats <em>twice</em> in a row.-->
+همانطور که اسم اصلی مقلد این به آن در بود، اسم اصلی مقلد مهربان هم این به دوتا آن در بود. همان قاعده: همکاری کن مگر آنکه بازیکن دیگر دوبار پشت هم تقلب کند. 
+</p>
 
-<p>There's another forgiving variant of Tit For Tat called <em>Generous Tit For Tat</em>. It's got a similar but slightly different rule: Cooperate, but when the other player cheats, forgive them with a X% chance. This design, with the variable "X", lets you set different "forgiveness" levels for the player.</p>
+<p>
+<!-- There's another forgiving variant of Tit For Tat called <em>Generous Tit For Tat</em>. It's got a similar but slightly different rule: Cooperate, but when the other player cheats, forgive them with a X% chance. This design, with the variable "X", lets you set different "forgiveness" levels for the player. -->
+یک مدل بخشنده این به آن در هم هست،‌ این به آن در بخشنده. یک قاعده مشابه با اندکی تفاوت دارد: همکاری کن، اما وقتی که بازیکن دیگر تقلب می‌کند، با احتمال p ببخش. در این مدل، با تغییر متغیر p، به ما اجاهز می‌دهد که میزان بخشنده بودن بازیکن را تعیین کنیم. 
+</p>
 
-<h3>"Simpleton"</h3>
+<h3>
+<!-- Simpleton" -->
+ساده
+</h3>
 
-<p>Also known as Pavlov, or Win-Stay-Lose-Shift.</p>
+<p>
+<!-- Also known as Pavlov, or Win-Stay-Lose-Shift. -->
+به نامهای پاولوف (داستان سگ پاولوف را شنیده‌اید؟ مترجم) یا برد می‌ماند باخت می‌رود.
+</p>
 
-<h3>"Our modern media [...] has increased our miscommunication"</h3>
+<h3>
+<!-- "Our modern media [...] has increased our miscommunication"-->
+«رسانه‌های مدرن سوء ارتباط را افزایش داده‌اند»
+</h3>
 
-<p>I'm only in my twenties, I don't know why I always sound like an old grump shaking my fist at a cloud. But, yeah, anyway, go read Neil Postman's 1985 book, <a href="https://www.amazon.com/Amusing-Ourselves-Death-Discourse-Business/dp/014303653X">Amusing Ourselves To Death</a>. It's about how the communications technology we use subtly shapes our culture ("the medium is the message") and how technology that is biased towards quick &amp; fast information (TV in 1985, social media now) turns us all into trivial, short-term thinkers.</p>
+<p>
+<!-- I'm only in my twenties, I don't know why I always sound like an old grump shaking my fist at a cloud. But, yeah, anyway, go read Neil Postman's 1985 book, <a href="https://www.amazon.com/Amusing-Ourselves-Death-Discourse-Business/dp/014303653X">Amusing Ourselves To Death</a>. It's about how the communications technology we use subtly shapes our culture ("the medium is the message") and how technology that is biased towards quick &amp; fast information (TV in 1985, social media now) turns us all into trivial, short-term thinkers. -->
+من در دهه سوم عمرم هستم. نمی‌دانم چرا مثل یک پیر غرغرو که همش مشتش را به سمت ابرها می‌گیرد به نظر می‌رسم. 
+اما به هرحال برو کتاب 
+Neil Postman's 1985 book, <a href="https://www.amazon.com/Amusing-Ourselves-Death-Discourse-Business/dp/014303653X">Amusing Ourselves To Death</a>
+را بخوان. 
+در باره این است که چطور تکنولوژی‌های ارتباطی که استفاده می‌کنیم به طور نا محسوسی فرهنگ ما را تغییر می‌دهند («واسطه خود پیام است») و چطور فن‌آوریی که به سرعت اهمیت می‌دهد (تلویزیون در ۱۹۸۵، رسانه‌های اجتماعی اکنون) ما را تبدیل به متفکرانی بدیهی کرده که تنها به کوتاه مدت می‌اندیشیم. 
+</p>
 
-<p>Although I don't agree with <em>everything</em> in his book, it's a real eye-opener, and surprisingly prescient for 1985. His rant against Sesame Street is kinda weird, though.</p>
+<p>
+<!-- 
+Although I don't agree with <em>everything</em> in his book, it's a real eye-opener, and surprisingly prescient for 1985. His rant against Sesame Street is kinda weird, though.
+-->
+گرچه با همه آنچه در کتابش نوشته موافق نیستم، اما دید آدم را باز می‌کند و به طور شگفتی آوری برای ۱۹۸۵ آینده نگر است. هر چند که بیهودگی گوییش بر علیه سسمی استریت به نوعی عجیب است.
+</p>
 
-<h3>"Build relationships. Find win-wins. Communicate clearly."</h3>
+<h3>
+<!-- "Build relationships. Find win-wins. Communicate clearly." -->
+«روابط را مستحکم کنید، برد-برد ها را بیابید، به طور واضح ارتباط برقرار کنید.»
+</h3>
 
-<p>Giving advice can come off as condescending, so let me be perfectly honest: I do <em>not</em> have any of this figured out, personally. I'm bad at developing friendships, especially with people of different political views than me. I occasionally forget about win-wins, and lapse into "us versus them" thinking. And judging by this rambling, I'm also still terrible at communicating clearly.</p>
+<p>
+<!-- Giving advice can come off as condescending, so let me be perfectly honest: I do <em>not</em> have any of this figured out, personally. I'm bad at developing friendships, especially with people of different political views than me. I occasionally forget about win-wins, and lapse into "us versus them" thinking. And judging by this rambling, I'm also still terrible at communicating clearly.-->
+نصیحت کردن می‌تواند متکبرانه به نظر برسد، برای همین اجازه بدهید که با شما کاملاً رو راست باشم: من شخصا به هیچکدام از اینها نرسیده‌ام. من در گسترش دوستی بد هستم،‌ خصوصاً با کسانی که دیدگاه سیاسی متفاوتی دارند. گهگاه برد-برد را فراموش می‌کنم و به دام تفکر ما بر علیه آنها می‌افتم. و با توجه به این نوشتار جسته و گریخته،‌ توانایی ارتباط واضح را هم ندارم. 
+</p>
 
-<p>But I want to get better. This stuff is <em>hard</em>. Building peace &amp; trust in the world, from the bottom up, is <em>hard</em>.</p>
+<p>
+<!-- But I want to get better. This stuff is <em>hard</em>. Building peace &amp; trust in the world, from the bottom up, is <em>hard</em>. -->
+اما دوست دارم که بهتر شوم. این چیزها سخت است. برقرار کردن صلح و اعتماد در این دنیا، از پایین به بالا،‌ سخت است.
+</p>
 
-<p>And that's why it's worth it. &lt;3</p>
+<p>
+<!-- And that's why it's worth it. &lt;3 -->
+اما ارزشش را دارد. 
+</p>
 
 
 </div>
