translating the note.

--- a/words.html
+++ b/words.html
@@ -1716,7 +1716,7 @@ Instagram: @hamed.allaei
 «تکامل همکاری»
 </span><br>
 <a href="notes" target="_blank">یادداشت خالق اثر در باره این بازی</a>
-(ترجمه بشود ...)
+(فارسی)
 
 <span class="divider"></span>
 خالق اثر از حامیانش در پاترون تشکر می‌کند
