some minor improvment in text and arrangment of conclusion.

--- a/words.html
+++ b/words.html
@@ -1568,7 +1568,7 @@ Feel free to skip it, or play around! Once you're done, let's recap... -->
 but you need the knowledge of possible future repeat interactions <i>before</i> trust can evolve.
 -->
 اعتماد روابط را پا برجا نگه می‌دارد،
-اما قبل از اینکه اعتماد به وجود آید، باید از تعاملات تکراری ممکن در آینده مطلع شد.
+اما قبل از اینکه اعتماد به وجود آید، باید از تکراری بودن تعاملات در آینده با خبر بود. 
 </p>
 <p id="conclusion_2_a">
 <!-- 2. POSSIBLE WIN-WINS -->
@@ -1578,7 +1578,8 @@ but you need the knowledge of possible future repeat interactions <i>before</i> 
 <!-- You must be playing a non-zero-sum game,
 a game where it's at least possible that <i>both</i> players can be better off -- a win-win.
 -->
-باید یک بازی با مجموع غیر صفر باشد، یک بازی که امکانش باشد که هر دو بازیکن بتوانند به یک وضیعیت مطلوب دست یابند -- یک برد-برد.
+باید یک بازی با مجموع امتیازات غیر صفر را بازی کنید،
+یک بازی که در آن هر دو بازیکن بتوانند به یک وضیعیت مطلوب دست یابند -- یک برد-برد.
 </p>
 <p id="conclusion_3_a">
 <!-- 3. LOW MISCOMMUNICATION -->
@@ -1587,7 +1588,7 @@ a game where it's at least possible that <i>both</i> players can be better off -
 <p id="conclusion_3_a2">
 <!-- If the level of miscommunication is <i>too</i> high, trust breaks down.
 But when there's a little bit of miscommunication, it pays to be <i>more</i> forgiving. -->
-اگر مقدار سوء تفاهمات زیاد باشد، اعتماد از بین می‌رود. اما اگر تنها مقدار کمی سوء تفاهم وجود داشته باشد، بخشنده‌تر بودن چاره کار است. 
+اگر سوء تفاهمات زیاد باشند اعتماد بین می‌رود. اما اگر تنها مقدار کمی سوء تفاهم وجود داشته باشد، سود در بخشندگی بیشتر است. 
 </p>
 <p id="conclusion_4">
 <!-- Of course, real-world trust is affected by much more than this.
@@ -1598,7 +1599,7 @@ And let's not forget... -->
 <p id="conclusion_btn">
 <!-- ...the <i>biggest</i> lesson. -->
 ... بزرگ‌ترین درس را.
-&rarr;
+&larr;
 </p>
 
 <p id="outro_1">
@@ -1623,7 +1624,7 @@ cross No Man's Land to come together... -->
 <i>
 همه 
 </i>
-نظریه‌بازی فقط یک پیام برای ما داشته باشد، آن پیام این است:
+نظریه‌بازی فقط یک پیام داشته باشد، آن پیام این است:
 <br><br>
 <b>
 اینکه بازی چه باشد، تعیین می‌کند که که بازیکن‌ها چه می‌کنند.
@@ -1634,9 +1635,9 @@ cross No Man's Land to come together... -->
 <i>
 محیط
 </i>
-از تکامل اعتماد جلوگیری می‌کند. 
+جلوی تکامل اعتماد را می‌گیرد.
 <br><br>
-این ممکن ساده لوحانه یا بدبینانه باشد -- اینکه ما حاصل محیطمان هستیم -- اما نظریه بازی به ما یادآوری می‌کند که ما محیط یک دیگر هستیم. 
+ممکن ساده لوحانه یا بدبینانه باشد -- اینکه ما حاصل محیطمان هستیم -- اما نظریه بازی به ما یادآوری می‌کند محیط که ما یک دیگر هستیم. 
 
 <b>
 در کوتاه مدت، بازی بازیکن‌ها را تعریف می‌کند، اما در بلند مدت، این ما هستیم که بازی را تعیین می‌کنیم. 
