--- a/words.html
+++ b/words.html
@@ -273,7 +273,7 @@ But now, what happens if we play this game...
 است.
 اعتماد خوب است، اما ممکن است دیگران از تو سوء استفاده کنند -- وقتی که بی تفنگ از سنگر بیرون می‌آیی، به تو شلیک کنند. 
 گاهی بی‌اعتمادی منطقی است!
-چه می‌شود اگر اگر این بازی را... 
+چه می‌شود اگر این بازی را... 
 </p>
 <p id="oneoff_button_next">
 <!-- ...more than once? &rarr; -->
