--- a/words.html
+++ b/words.html
@@ -1634,13 +1634,13 @@ cross No Man's Land to come together... -->
 بلکه مشکل اصلی این است که
 <i>
 محیط
-</i>
+</i>، 
 جلوی تکامل اعتماد را می‌گیرد.
 <br><br>
-ممکن ساده لوحانه یا بدبینانه باشد -- اینکه ما حاصل محیطمان هستیم -- اما نظریه بازی به ما یادآوری می‌کند محیط که ما یک دیگر هستیم. 
+ممکن ساده لوحانه یا بدبینانه باشد -- اینکه ما فقط حاصل محیطمان هستیم -- اما همان‌گونه که نظریه بازی به ما یادآوری می‌کند، ما برای یکدیگر نقش محیط را ایفا می‌کنیم. 
 
 <b>
-در کوتاه مدت، بازی بازیکن‌ها را تعریف می‌کند، اما در بلند مدت، این ما هستیم که بازی را تعیین می‌کنیم. 
+در کوتاه مدت، بازی، بازیکن‌ها را تعریف می‌کند، اما در بلند مدت، این ما هستیم که بازی را تعیین می‌کنیم. 
 </b>
 <br><br>
 بنابراین، تلاش خودت را بکن تا شرایط تکامل اعتماد فراهم شود. 
