--- a/words.html
+++ b/words.html
@@ -219,7 +219,7 @@ If you cooperate &amp; they cheat, you lose a coin while they gain three. (score
 However, if you both cheat, neither of you gain or lose anything. (score: 0 vs 0)
 <b>Therefore: you should CHEAT.</b>
 -->
-اگر همکاری کنی اما دیگری تقلب کنند، ۱ سکه از دست می‌دهی، در حالیکه او ۳ سکه به دست می‌آورد. (امتیاز: ۱- به ۳+)
+اگر همکاری کنی اما دیگری تقلب کند، ۱ سکه از دست می‌دهی، در حالیکه او ۳ سکه به دست می‌آورد. (امتیاز: ۱- به ۳+)
 اگر هر دو تقلب کنید، هر دو نه چیزی بدست می‌آورید نه چیزی از دست می‌دهید. (امتیاز: ۰ به ۰)
 <b>
 بنابراین: 
@@ -1066,8 +1066,9 @@ let's now look at our third &amp; final barrier to the evolution of trust... -->
 </p>
 <p id="distrust_5_btn">
 <s>
-اشتاهات
+اشطباحاط
 </s> 
+
 اشتباهات. 
 &larr;
 </p>
@@ -1351,7 +1352,7 @@ to more <i>forgiveness</i>. But is this true for <i>all</i> levels...
 </i>
 ،
 <span class="tf2t">مقلد مهربان</span>
-نسخه 
+، نسخه 
 <i>
 بخشنده‌تر
 </i> 
@@ -1637,7 +1638,7 @@ cross No Man's Land to come together... -->
 </i>، 
 جلوی تکامل اعتماد را می‌گیرد.
 <br><br>
-ممکن ساده لوحانه یا بدبینانه باشد -- اینکه ما فقط حاصل محیطمان هستیم -- اما همان‌گونه که نظریه بازی به ما یادآوری می‌کند، ما برای یکدیگر نقش محیط را ایفا می‌کنیم. 
+شاید ساده لوحانه یا بدبینانه باشد -- اینکه ما فقط حاصل محیطمان هستیم -- اما همان‌گونه که نظریه بازی به ما یادآوری می‌کند، ما برای یکدیگر نقش محیط را ایفا می‌کنیم. 
 
 <b>
 در کوتاه مدت، بازی، بازیکن‌ها را تعریف می‌کند، اما در بلند مدت، این ما هستیم که بازی را تعیین می‌کنیم. 
