--- a/words.html
+++ b/words.html
@@ -319,7 +319,7 @@ Pick your first, <i>real</i> move. <b>Choose wisely.</b> -->
 </p>
 
 <p id="iterated_score_start">
-و امتاز نهایی تو می‌شود ...
+و امتیاز نهایی تو می‌شود ...
 </p>
 <p id="iterated_score_1">
 <!-- which is, wow, actually <i>impressively</i> bad.-->
