--- a/words.html
+++ b/words.html
@@ -129,7 +129,7 @@ fewer and fewer people say they trust each other. So here's our puzzle:
 <br>
 از اعتماد خبری نیست. 
 <br>
-نظر سنجی‌ها نشان می‌دهند که در ۴۰ سال گذشته، آدمها کمتر و کمتر به هم اعتماد می‌کنند. معما این است:
+نظر سنجی‌ها نشان می‌دهند که در ۴۰ سال گذشته، آدم‌ها کمتر و کمتر به هم اعتماد می‌کنند. معما این است:
 <br>
 <!--
 <b>Why, even in peacetime, do friends become enemies?<br>
@@ -458,25 +458,25 @@ PLACE YOUR BETS:</b>
 <!-- ...You may be skeptical about that Christmas Truce story about the World War I trenches.
 Surely that was just a fluke?
 -->
-... ممکن است که با شک و تردید به داستان آتش بس کریسمس در جنگ جهانی اول نگاه کنی. 
+... ممکن است که با شک و تردید به داستان آتش‌بس کریسمس در جنگ جهانی اول نگاه کنی. 
 هنوز هم فکر می‌کنی که فقط یک تصادف بوده؟
 </p>
 <p id="tournament_3">
 <!-- Yes, the truce was dramatic, but it was <i>neither unique, nor unusual</i>. -->
-بله، آتش بس بسیار چشمگیر بود، اما نه عجیب بود و نه غریب. 
+بله، آتش‌بس بسیار چشمگیر بود، اما نه عجیب بود و نه غریب. 
 </p>
 <p id="tournament_4">
 <!-- Not <i>every</i> trench joined in the peace, but it was pretty widespread.
 Many front-lines came up with the idea independently, and again: <i>despite</i> specific, strict orders not to.
 -->
-همه سنگرها در آتش بس شرکت نکردند، اما آتش بس گسترده‌ای بود. 
-بر خلاف همه دستورات بازدارنده، این ایده به طور مستقل به ذهنی خیلی‌ها در خطوط مقدم رسیده بود.
+همه سنگرها در آتش‌بس شرکت نکردند، اما آتش‌بس گسترده‌ای بود. 
+بر خلاف همه دستورات بازدارنده، این ایده به طور مستقل به ذهن خیلی‌ها در خطوط مقدم رسیده بود.
 
 </p>
 <p id="tournament_5">
 <!-- And in fact, even <i>before</i> Christmas, several front-lines already <i>had</i>
 established an unofficial, secret peace.-->
-در واقع، حتی قبل از کریسمس هم خیلی از خطوط مقدم در یک آتش بس مخفی غیر رسمی بودند. 
+در واقع، حتی قبل از کریسمس هم خیلی از خطوط مقدم در یک آتش‌بسِ مخفیِ غیررسمی بودند. 
 </p>
 <p id="tournament_6">
 <!-- They called it: <b>the "live and let live" system.</b>
@@ -486,7 +486,7 @@ Basically, you don't shoot me, I don't shoot you. And this worked, in a lot of p
 <p id="tournament_7">
 <!-- You may still be skeptical. Most soldiers don't spontaneously form peace with the enemy.
 What's so special about <i>trench</i> warfare? -->
-هنوز هم ممکن است تردید داشته باشی. اغلب سربازها به خودی خود با دشمن به صلح نمی‌رسند. پس چه چیزی در باره آن جنگ سنگر به سنگر خاص بود؟
+هنوز هم ممکن است تردید داشته باشی. اغلب سربازها به خودی خود با دشمن به صلح نمی‌رسند. پس چه چیزی درباره آن جنگ سنگر به سنگر خاص بود؟
 </p>
 <p id="tournament_8">
 <!-- Well, here's what's unique about the trenches:
@@ -821,7 +821,7 @@ but its exploitativeness was its downfall. -->
 (Note: sometimes, a few <span class="grudge">Grudgers</span> may stick around,
 because when all players except <span class="grudge">Grudger</span> &amp; <span class="tft">Copycat</span> 
 are eliminated, the two tie.) -->
-(یادداشت: بعضی وقتها، چندتایی 
+(یادداشت: بعضی وقت‌ها، چندتایی 
 <span class="grudge">کینه‌ای</span>
 ممکن است باقی بمانند، برای اینکه وقتی همه به جز 
 <span class="grudge">‌‌کینه‌ای‌ها</span> 
@@ -836,7 +836,7 @@ that <span class="tft">Copycat's</span> philosophy,
 However...
 -->
 نظریه بازی درسی برای ما دارد:
-«با دیگران همانطور رفتار کن که دوست داری با تو رفتار کنند»، این نه نتها یک حقیقت اخلاقی است، بلکه یک حقیقت ریاضی هم هست. 
+«با دیگران همانطور رفتار کن که دوست داری با تو رفتار کنند»، این نه تنها یک حقیقت اخلاقی است، بلکه یک حقیقت ریاضی هم هست. 
 
 </p>
 <p id="evo_10_btn">
@@ -847,7 +847,7 @@ However...
 
 <p id="evo_11">
 <!-- Look around. The world's full of total jerkwads. -->
-به اطرافت نگاه کن، دنیا پر از آدمهای احمق است.
+به اطرافت نگاه کن، دنیا پر از آدم‌های احمق است.
 <br><br>
 <!-- 
 If <span class="tft">Copycat</span> is the strategy in this repeated game of trust that's so powerful --
@@ -858,8 +858,8 @@ What's causing our epidemic of un-trust?
 اگر در یک بازی مکرر استراتژی 
 <span class="tft">مقلد</span>
 اینقدر موثر و موفق است، به طوریکه حتی در جنگ جهانی اول سنگرها به طور مستقل به استراتژی مشابه «زندگی کن و بگذار زندگی کنند» رسیدند،
-پس چرا اینقدر آدمهای بی اعتماد و غیر قابل اطمینان داریم؟
-چه چیزی بی اعتمادی را فراگیر کرده است؟
+پس چرا اینقدر آدم‌های بی اعتماد و غیر قابل اطمینان داریم؟
+چه چیزی بی‌اعتمادی را فراگیر کرده است؟
 
 <br><br>
 <!-- A clue's in that sentence itself. "In <i>this</i> repeated game of trust."
@@ -1458,7 +1458,7 @@ Let's play... -->
 <i>
 زیادی آن
 </i> 
-به بی اعتمادی گسترده می‌انجامد. 
+به بی‌اعتمادی گسترده می‌انجامد. 
 من فکر می‌کنم رسانه‌های مدرن، بیش از آنکه ارتباط را افزایش داده باشند ...
 <i>
 سوء ارتباط
