fixed typos, thanks to Farideh.

--- a/words.html
+++ b/words.html
@@ -971,7 +971,7 @@ and oh, it gets worse... &rarr; -->
 بود.
 
 وقتی که در کل دوستان کمتری داشته باشیم، دوستان به مراتب کمتری هم در میان طبقات اجتماعی، نژادی، اقتصادی و سیاسی مختلف خواهیم داشت. 
-این را هم الان هم خودت کشف کردی که 
+این را همین الان خودت کشف کردی که 
 <b>
 هر چه روابط تکراری کمتر باشد، بی‌اعتمادی بیشتر می‌شود. 
 </b>
@@ -1182,7 +1182,7 @@ if you cooperate back, i do <i>same thing</i> as last move, even if it mistake.
 if you cheat back, i do <i>opposite thing</i> as last move, even if it mistake. -->
 
 سلام، من با همکاری آغاز می‌کنم، 
-اگر تو هم همکاری کنی، من دقیقاً همانکاری را در دور قبل انجام داده بودم تکرار می‌کنم. اگر خیانت کنی، برعکس همان کار را انجام می‌دهم. 
+اگر تو هم همکاری کنی، من دقیقاً همان‌کار دور قبلم تکرار می‌کنم. اگر خیانت کنی، برعکس همان کار دور قبلم را انجام می‌دهم. 
 </p>
 
 <p id="character_random">
@@ -1368,7 +1368,7 @@ to more <i>forgiveness</i>. But is this true for <i>all</i> levels...
 از میدان به در نمی‌کند. با آنها کنار می‌آید.
 )
 <br><br>
-در حالت، کمی سوء تفاهم (۵ درصد شانس اشتباه در هر دور)، می‌تواند منجر به
+در این حالت، کمی سوء تفاهم (۵ درصد شانس اشتباه در هر دور)، می‌تواند منجر به
 <i>
 بخشش
 </i>
@@ -1589,7 +1589,7 @@ a game where it's at least possible that <i>both</i> players can be better off -
 <p id="conclusion_3_a2">
 <!-- If the level of miscommunication is <i>too</i> high, trust breaks down.
 But when there's a little bit of miscommunication, it pays to be <i>more</i> forgiving. -->
-اگر سوء تفاهمات زیاد باشند اعتماد بین می‌رود. اما اگر تنها مقدار کمی سوء تفاهم وجود داشته باشد، سود در بخشندگی بیشتر است. 
+اگر سوء تفاهمات زیاد باشند اعتماد از بین می‌رود. اما اگر تنها مقدار کمی سوء تفاهم وجود داشته باشد، سود در بخشندگی بیشتر است. 
 </p>
 <p id="conclusion_4">
 <!-- Of course, real-world trust is affected by much more than this.
@@ -1638,7 +1638,7 @@ cross No Man's Land to come together... -->
 </i>، 
 جلوی تکامل اعتماد را می‌گیرد.
 <br><br>
-شاید ساده لوحانه یا بدبینانه باشد -- اینکه ما فقط حاصل محیطمان هستیم -- اما همان‌گونه که نظریه بازی به ما یادآوری می‌کند، ما برای یکدیگر نقش محیط را ایفا می‌کنیم. 
+شاید ساده لوحانه یا بدبینانه باشد -- اینکه ما فقط حاصل محیط‌مان هستیم -- اما همان‌گونه که نظریه بازی به ما یادآوری می‌کند، ما برای یکدیگر نقش محیط را ایفا می‌کنیم. 
 
 <b>
 در کوتاه مدت، بازی، بازیکن‌ها را تعریف می‌کند، اما در بلند مدت، این ما هستیم که بازی را تعیین می‌کنیم. 
