--- a/words.html
+++ b/words.html
@@ -1690,10 +1690,9 @@ Instagram: @hamed.allaei
 اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون ایران را جای بهتری کند، 
 <br>
 <a href="https://www.payping.ir/d/8Xt2" target="_blank"> 
-به اندازه اپسیلون ﷼ از من حمایت کن.
+به اندازه اپسیلون تومان از من حمایت کن.
 </a> 
-<br>
-دقت کنید که مبلغ به تومان است!
+
 <!--
 در صورت رضایت، از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد. مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
 -->
