--- a/words.html
+++ b/words.html
@@ -113,7 +113,7 @@ and gathered to bury their dead, exchange gifts, and play games.
 -->
 کریسمس سال ۱۹۱۴، در جبهه غربی (مرز آلمان و فرانسه)، 
 <br>
-سربازان انگلیسی و آلمانی بر خلاف دستورات موکد سنگر‌هایشان را ترک می‌کنند، 
+سربازان انگلیسی و آلمانی بر خلاف دستورات، سنگر‌هایشان را ترک می‌کنند، 
 <br>
 از زمین بی صاحب رد می‌شوند، اجساد همرزمانشان را دفن می‌کنند، 
 <br>
@@ -142,7 +142,7 @@ And why, even in wartime, do enemies become friends?</b>
 I think <b>game theory</b> can help explain our epidemic of distrust –<br>
 and how we can fix it! So, to understand all this...
 -->
-من فکر می‌کنم که نظریه بازی می‌تواند روشن کند که چرا بی‌اعتمادی همه گیر شده است
+به نظر من نظریه بازی می‌تواند روشن کند که چرا بی‌اعتمادی همه گیر شده است
 و ما چطور می‌توانیم برای آن چاره‌ای پیدا کنیم. برای فهمیدنش ...
 </p>
 <p id="intro_button">
@@ -532,7 +532,7 @@ same <i>specific people</i> (not just the same generic "enemy") over and over ag
 
 <span class="tft">مقلد</span> 
 نامهای فراوانی دارد. 
-قانون طلایی، فداکاری متقابل، چشم در برابر چشم، یا
+قصاص، فداکاری متقابل، چشم در برابر چشم، این به آن در، یا
 <b>زندگی کن و بگذار زندگی کنند.</b>
 برای همین بود که در جنگ جهانی اول صلح پدیدار شد. 
 وقتی که مجبوری همان بازی را با همان فرد خاص بارها و بارها تکرار کنی،
@@ -1687,12 +1687,17 @@ Telegram: @hamed_allaei
 Instagram: @hamed.allaei 
 </a>
 <br>
-اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون ایران را جای بهتری کند، 
+اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون دنیا را جای بهتری کند، 
 <br>
 <a href="https://www.payping.ir/d/8Xt2" target="_blank"> 
 به اندازه اپسیلون تومان از من حمایت کن.
 </a> 
-
+<br>
+از افکار و تجربیات خودت درباره‌ 
+<a href="https://www.google.com/search?source=hp&q=%23%D8%A8%D8%A7%D8%B2%DB%8C_%D8%A7%D8%B9%D8%AA%D9%85%D8%A7%D8%AF">
+#بازی_اعتماد
+</a>
+بنویس و برای دوستان و آشنایان بفرست.
 <!--
 در صورت رضایت، از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد. مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
 -->
