--- a/words.html
+++ b/words.html
@@ -1628,7 +1628,7 @@ cross No Man's Land to come together... -->
 نظریه‌بازی فقط یک پیام داشته باشد، آن پیام این است:
 <br><br>
 <b>
-اینکه بازی چه باشد، تعیین می‌کند که که بازیکن‌ها چه می‌کنند.
+اینکه بازی چه باشد، تعیین می‌کند که بازیکن‌ها چه می‌کنند.
 </b><br>
 مسئله نبود اعتماد نیست،
 <br>
@@ -1645,7 +1645,7 @@ cross No Man's Land to come together... -->
 </b>
 <br><br>
 بنابراین، تلاش خودت را بکن تا شرایط تکامل اعتماد فراهم شود. 
-ارتباط برقرار کن، موقعیت‌های برد-برد را بیاب، و در اتباطات واضح و شفاف عمل کن. 
+ارتباط برقرار کن، موقعیت‌های برد-برد را بیاب، و در ارتباطات واضح و شفاف عمل کن. 
 شاید آن موقع بتوانیم به هم دیگر شلیک نکنیم، از سنگرها بیرون بیاییم، از سرزمین بی صاحب رد شویم و با هم باشیم...
 </p>
 
