changing meta url

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Many thanks again!
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta property="og:title" content="تکامل اعتماد">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://ncase.me/trust/">
+	<meta property="og:url" content="http://hamed.github.io/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
 	<meta property="og:description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم">
 
