--- a/words.html
+++ b/words.html
@@ -1697,7 +1697,11 @@ Instagram: @hamed.allaei
 <a href="https://www.google.com/search?source=hp&q=%23%D8%A8%D8%A7%D8%B2%DB%8C_%D8%A7%D8%B9%D8%AA%D9%85%D8%A7%D8%AF">
 #بازی_اعتماد
 </a>
-بنویس و برای دوستان و آشنایان بفرست.
+بنویس و برای دوستان و آشنایان بفرست. 
+<a href="https://hamed.github.io/fa/post/trustpersonal/" target="_blank">
+تجربه من
+</a>
+از این بازی.
 <!--
 در صورت رضایت، از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد. مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
 -->
