added link to polygons

--- a/words.html
+++ b/words.html
@@ -1701,7 +1701,11 @@ Instagram: @hamed.allaei
 <a href="https://hamed.github.io/fa/post/trustpersonal/" target="_blank">
 تجربه من
 </a>
-از این بازی.
+از این بازی، و یک بازی دیگر، 
+<a href="https://hamed.github.io/polygons" target="_blank">
+داستان چند ضلعی‌ها
+</a>
+شاید برایت جالب باشد.
 <!--
 در صورت رضایت، از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد. مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
 -->
