--- a/words.html
+++ b/words.html
@@ -1689,9 +1689,15 @@ Instagram: @hamed.allaei
 <br>
 اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون دنیا را جای بهتری کند، 
 <br>
+به اندازه 
 <a href="https://www.payping.ir/d/8Xt2" target="_blank"> 
-به اندازه اپسیلون تومان از من حمایت کن.
+اپسیلون تومان
 </a> 
+یا 
+<a href="https://www.paypal.me/allaei" target="_blank"> 
+اپسیلون دلار 
+</a> 
+از من حمایت کن.
 <br>
 از افکار و تجربیات خودت درباره‌ 
 <a href="https://www.google.com/search?source=hp&q=%23%D8%A8%D8%A7%D8%B2%DB%8C_%D8%A7%D8%B9%D8%AA%D9%85%D8%A7%D8%AF">
