--- a/words.html
+++ b/words.html
@@ -1695,7 +1695,7 @@ Instagram: @hamed.allaei
 </a> 
 یا 
 <a href="https://www.paypal.me/allaei" target="_blank"> 
-اپسیلون دلار 
+اپسیلون یورو  
 </a> 
 از من حمایت کن.
 <br>
