fixed payping link

--- a/words.html
+++ b/words.html
@@ -1690,7 +1690,7 @@ Instagram: @hamed.allaei
 اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون دنیا را جای بهتری کند، 
 <br>
 به اندازه 
-<a href="https://www.payping.ir/d/8Xt2" target="_blank"> 
+<a href="https://www.payping.net/d/8Xt2" target="_blank">
 اپسیلون تومان
 </a> 
 یا 
