--- a/words.html
+++ b/words.html
@@ -1242,9 +1242,9 @@ Alright, you bet [CHAR] wins. Let's find out!
 Use the controls to your left to <b>START</b> the sim in quick mode,
 or go through it <b>step-by-step</b>. -->
 
-بسیار عالی! شرط را بردی! 
+بسیار خوب! روی! 
 [CHAR] 
-برنده شد. بیا یک کم بیشتر بررسی کنیم. 
+شرط بستی. بیا یک کم بیشتر بررسی کنیم. 
 با استفاده از کنترل‌هایی که در سمت چپ است، شبیه سازی را در حالت سریع 
 <b>شروع</b> 
 کن، و یا 
