--- a/words.html
+++ b/words.html
@@ -111,7 +111,7 @@ and German soldiers left their trenches, crossed No Man's Land,<br>
 and gathered to bury their dead, exchange gifts, and play games.
 <br><br>
 -->
-کریسمس سال ۱۹۱۴، در جبهه غربی (مرز آلمان و فرانسه)، 
+کریسمس سال ۱۹۱۴، در جبهه‌ی غربی (مرز آلمان و فرانسه)، 
 <br>
 سربازان انگلیسی و آلمانی بر خلاف دستورات، سنگر‌هایشان را ترک می‌کنند، 
 <br>
@@ -125,7 +125,7 @@ wow, we <i>suck</i> at trust. Surveys show that, over the past forty years,
 fewer and fewer people say they trust each other. So here's our puzzle:
 <br><br>
 -->
-اما حالا، با اینکه غرب سالها در صلح و سلامت است، 
+اما حالا، با اینکه غرب سالهاست که در صلح و سلامت است، 
 <br>
 از اعتماد خبری نیست. 
 <br>
@@ -271,7 +271,7 @@ But now, what happens if we play this game...
 همین 
 </i>
 است.
-اعتماد خوب است، اما ممکن است دیگران از تو سوء استفاده کنند -- وقتی که بی تفنگ از سنگر بیرون می‌آیی، به تو شلیک کنند. 
+اعتماد خوب است، اما ممکن است دیگران از تو سوءاستفاده کنند -- وقتی که بی تفنگ از سنگر بیرون می‌آیی، به تو شلیک کنند. 
 گاهی بی‌اعتمادی منطقی است!
 چه می‌شود اگر این بازی را... 
 </p>
@@ -384,7 +384,7 @@ but if y'all ever cheat me, I'LL CHEAT YOU BACK 'TIL THE END OF TARNATION. -->
 If you cheat back, I'll act like <span class="tft">Copycat</span>.
 If you never cheat back, I'll act like <span class="all_d">Always Cheat</span>, to exploit you.
 Elementary, my dear Watson. -->
-من اول تو را تحلیل می‌کنم. شروع من اینطوری است: همکاری، تقلب، همکاری، همکاری. اگر تقلب کنی، مقلد میمون صفت می‌شوم. اما اگر اصلا تقلب نکنی، مثل همیشه متقلب ازت سوء استفاده می‌کنم. به همین سادگی!
+من اول تو را تحلیل می‌کنم. شروع من اینطوری است: همکاری، تقلب، همکاری، همکاری. اگر تقلب کنی، مقلد میمون صفت می‌شوم. اما اگر اصلا تقلب نکنی، مثل همیشه متقلب ازت سوءاستفاده می‌کنم. به همین سادگی!
 </p>
 
 <p id="characters_teaser">
@@ -595,7 +595,7 @@ Note: you don't have to wait for people to literally die &amp; reproduce for cul
 all that's needed is that "unsuccessful" behaviors go away, and "successful" behaviors are imitated.
 So now... -->
 ... و تکرار کن، هر چقدر که عشقت می‌کشد.
-توجه: در عالم واقع لازم نیست که یک بازیکن به صورت فیزیکی حذف شود. تنها کافی است که فرهنگ تغییر کند، مثلا یک بازیکن، استراتژی نا موفقش را رها می‌کند و سعی می‌کند از استراتژی موفق پیروی کند. خوب حالا ...
+توجه: در عالم واقع لازم نیست که یک بازیکن به صورت فیزیکی حذف شود. تنها کافی است که فرهنگ تغییر کند، مثلا یک بازیکن، استراتژی ناموفقش را رها می‌کند و سعی می‌کند از استراتژی موفق پیروی کند. خوب حالا ...
 </p>
 <p id="evolution_intro_button">
 ... در عمل ببینیم که چه می‌شود.
@@ -645,7 +645,7 @@ Let's make another bet! Who do you think will win the <i>first</i> tournament?
 <span class="all_d">همیشه متقلب</span> 
 تعداد زیادی
 <span class="all_c">معصوم</span> 
-برای سوء استفاده دارد ...
+برای سوءاستفاده دارد ...
 </p>
 <p id="evo_2_tft">
 به نظر منطقی می‌رسد،
@@ -714,7 +714,7 @@ who <i>are</i> nice, but not naive. -->
 
 <span class="all_d">همیشه متقلب‌ها</span> 
 قربانی موفقیت خودشان شدند!
-آنها با سوء استفاده از 
+آنها با سوءاستفاده از 
 <span class="all_c">معصومین</span>
 به موفقیت رسیدند. وقتی که دیگر 
 <span class="all_c">معصومی</span>
@@ -769,7 +769,7 @@ but in the end, its exploitativeness was its downfall. -->
 
 در کوتاه مدت حق با تو بود و 
 <span class="all_d">همیشه متقلب</span> 
-چند دور اول سر بلند بود. اما در انتها، سوء استفاده‌چی بودن به زمین کوبیدشان.
+چند دور اول سر بلند بود. اما در انتها، سوءاستفاده‌چی بودن به زمین کوبیدشان.
 
 </p>
 <p id="evo_9_tft">
@@ -781,7 +781,7 @@ but its exploitativeness was its downfall. -->
 <span class="tft">مقلدین</span> 
 برنده شد!
 <span class="all_d">همیشه متقلب</span> چند دور اول را خوب آمد,
-اما در انتها، سوء استفاده چی بودن به زمین کوبدشان.
+اما در انتها، سوءاستفاده چی بودن به زمین کوبدشان.
 </p>
 <p id="evo_9_end">
 <!-- This reminds me of a quote:
@@ -1106,7 +1106,7 @@ To understand the problem, let's say two <span class="tft">Copycats</span> are p
 <b>ای وای!</b>
 <br>
 <!-- Mistakes, miscommunication, misinterpretations -- accidents happen all the time in real life. -->
-اشتباه، سوء تفاهم، بدشانسی و تصادف در زندگی واقعی همیشه می‌توانند اتفاق بیافتند.
+اشتباه، سوءتفاهم، بدشانسی و تصادف در زندگی واقعی همیشه می‌توانند اتفاق بیافتند.
 </p>
 <p id="noise_3_end">
 <!-- But if the other person doesn't <i>think</i> it was an accident...-->
@@ -1368,7 +1368,7 @@ to more <i>forgiveness</i>. But is this true for <i>all</i> levels...
 از میدان به در نمی‌کند. با آنها کنار می‌آید.
 )
 <br><br>
-در این حالت، کمی سوء تفاهم (۵ درصد شانس اشتباه در هر دور)، می‌تواند منجر به
+در این حالت، کمی سوءتفاهم (۵ درصد شانس اشتباه در هر دور)، می‌تواند منجر به
 <i>
 بخشش
 </i>
@@ -1584,12 +1584,12 @@ a game where it's at least possible that <i>both</i> players can be better off -
 </p>
 <p id="conclusion_3_a">
 <!-- 3. LOW MISCOMMUNICATION -->
-۳- سوء تفاهم کم
+۳- سوءتفاهم کم
 </p>
 <p id="conclusion_3_a2">
 <!-- If the level of miscommunication is <i>too</i> high, trust breaks down.
 But when there's a little bit of miscommunication, it pays to be <i>more</i> forgiving. -->
-اگر سوء تفاهمات زیاد باشند اعتماد از بین می‌رود. اما اگر تنها مقدار کمی سوء تفاهم وجود داشته باشد، سود در بخشندگی بیشتر است. 
+اگر سوءتفاهمات زیاد باشند اعتماد از بین می‌رود. اما اگر تنها مقدار کمی سوءتفاهم وجود داشته باشد، سود در بخشندگی بیشتر است. 
 </p>
 <p id="conclusion_4">
 <!-- Of course, real-world trust is affected by much more than this.
