--- a/words.html
+++ b/words.html
@@ -1646,7 +1646,7 @@ cross No Man's Land to come together... -->
 <br><br>
 بنابراین، تلاش خودت را بکن تا شرایط تکامل اعتماد فراهم شود. 
 ارتباط برقرار کن، موقعیت‌های برد-برد را بیاب، و در ارتباطات واضح و شفاف عمل کن. 
-شاید آن موقع بتوانیم به هم دیگر شلیک نکنیم، از سنگرها بیرون بیاییم، از سرزمین بی صاحب رد شویم و با هم باشیم...
+شاید آن موقع بتوانیم به هم دیگر شلیک نکنیم، از سنگرها بیرون بیاییم، از سرزمین بی‌صاحب رد شویم و با هم باشیم...
 </p>
 
 <p id="outro_1_btn">
@@ -1705,7 +1705,7 @@ Instagram: @hamed.allaei
 </a>
 بنویس و برای دوستان و آشنایان بفرست. 
 <a href="https://hamed.github.io/fa/post/trustpersonal/" target="_blank">
-تجربه من
+تجربه‌ی من
 </a>
 از این بازی، و یک بازی دیگر، 
 <a href="https://hamed.github.io/polygons" target="_blank">
@@ -1854,7 +1854,7 @@ Instagram: @hamed.allaei
 
 <!-- Starts with Cooperate. Then, it simply repeats whatever YOU did in the last round. -->
 <p id="who_tft">
-با همکاری آغاز می‌کند، و بعد از آن هر کاری که در دور قبل کرده باشی را تکرار می‌کند. 
+با همکاری آغاز می‌کند و بعد از آن هر کاری که در دور قبل کرده باشی را تکرار می‌کند. 
 </p>
 <p id="who_all_d">
 همیشه تقلب می‌کند.
@@ -1869,7 +1869,7 @@ Instagram: @hamed.allaei
 Afterwards, it always plays Cheat.
 -->
 <p id="who_grudge">
-با همکاری شروع می‌کند، و به همکاریش ادامه می‌دهد تا اینکه یکبار تقلب کنی. بعد از آن همیشه تقلب می‌کند. 
+با همکاری شروع می‌کند و به همکاریش ادامه می‌دهد تا اینکه یکبار تقلب کنی. بعد از آن همیشه تقلب می‌کند. 
 </p>
 
 <!-- Starts with: Cooperate, Cheat, Cooperate, Cooperate.
@@ -1877,7 +1877,7 @@ Afterwards, if you ever retaliate with a Cheat, it plays like a Copycat.
 Otherwise, it plays like an Always Cheat.
 -->
 <p id="who_prober">
-در ابتدا به این ترتیب بازی می‌کند: همکاری، تقلب، همکاری، همکاری. بعد از آن، اگر با تقلب انتقام گرفته باشی، مثل مقلد بازی می‌کند. وگر نه، مثل همیشه متقلب بازی می‌کند.
+در ابتدا به این ترتیب بازی می‌کند: همکاری، تقلب، همکاری، همکاری. بعد از آن، اگر با تقلب انتقام گرفته باشی، مثل مقلد بازی می‌کند. وگرنه، مثل همیشه متقلب بازی می‌کند.
 </p>
 
 <!-- Only retaliates with a Cheat if you cheated it TWICE in a row. -->
