fix highest and lowest score priority

--- a/words.html
+++ b/words.html
@@ -347,7 +347,7 @@ Pick your first, <i>real</i> move. <b>Choose wisely.</b> -->
 </p>
 <p id="iterated_score_end">
 <!-- (the lowest &amp; highest possible scores are 7 and 49, respectively) -->
-بیشترین و کمترین امتیاز ممکن، به ترتیب ۷ و ۴۹ هستند. 
+کمترین و بیشترین امتیاز ممکن، به ترتیب ۷ و ۴۹ هستند. 
 </p>
 
 <p id="who_were">
