--- a/words.html
+++ b/words.html
@@ -577,7 +577,7 @@ Get rid of the 5 worst players. (if there's a tie, pick randomly between them) -
 <b>
 ۲- حذف بازنده‌ها
 </b><br>
-۵ بازیکنی که از همه بدتر بوده‌اند را حذف کن. (اگر امتیازشان مساوی بود، به طور تصافی حذف کن)
+۵ بازیکنی که از همه بدتر بوده‌اند را حذف کن. (اگر امتیازشان مساوی بود، به طور تصادفی حذف کن)
 </p>
 <p id="evolution_intro_3">
 <!-- b>3. REPRODUCE WINNERS</b><br>
