--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@ twq('track','PageView');
 <script src="js/slides/0_Slides_Intro.js?v7"></script>
 <script src="js/slides/1_Slides_OneOff.js?v7"></script>
 <script src="js/slides/2_Slides_Iterated.js?v7"></script>
-<script src="js/slides/3_Slides_Tournament.js?v7"></script>
-<script src="js/slides/4_Slides_Evolution.js?v7"></script>
-<script src="js/slides/5_Slides_Distrust.js?v7"></script>
-<script src="js/slides/6_Slides_Noise.js?v7"></script>
-<script src="js/slides/7_Slides_Sandbox.js?v7"></script>
-<script src="js/slides/8_Slides_Conclusion.js?v7"></script>
-<script src="js/slides/9_Slides_Credits.js?v7"></script>
+<!--<script src="js/slides/3_Slides_Tournament.js?v7"></script>-->
+<!--<script src="js/slides/4_Slides_Evolution.js?v7"></script>-->
+<!--<script src="js/slides/5_Slides_Distrust.js?v7"></script>-->
+<!--<script src="js/slides/6_Slides_Noise.js?v7"></script>-->
+<!--<script src="js/slides/7_Slides_Sandbox.js?v7"></script>-->
+<!--<script src="js/slides/8_Slides_Conclusion.js?v7"></script>-->
+<!--<script src="js/slides/9_Slides_Credits.js?v7"></script>-->
 
 <!-- Main Code -->
 <script src="js/main.js?v7"></script>
