edit slide 6 texts

--- a/words.html
+++ b/words.html
@@ -1271,8 +1271,8 @@ since <span class="all_c">Always Cooperate</span> never retaliates,
 
 <span class="pavlov">ساده</span>
 برند شد!
-برای اینکه 
-<span class="pavlov">ساده</span>
+<!-- برای اینکه  -->
+<!-- <span class="pavlov">ساده</span>
 می‌تواند از 
 <span class="all_c">معصوم</span>
 سوء استفاده کند.
@@ -1283,7 +1283,7 @@ since <span class="all_c">Always Cooperate</span> never retaliates,
 هرگز تلافی نمی‌کند، 
 <i>
 او تا ابد جر خواهد زد
-</i>.
+</i>. -->
 
 </p>
 <p id="noise_evo_2_2_btn">
