edit slide 6 texts

--- a/words.html
+++ b/words.html
@@ -1271,6 +1271,11 @@ since <span class="all_c">Always Cooperate</span> never retaliates,
 
 <span class="pavlov">ساده</span>
 برند شد!
+
+به نظرت چرا 
+<span class="pavlov">ساده</span>
+برنده شد؟
+
 <!-- برای اینکه  -->
 <!-- <span class="pavlov">ساده</span>
 می‌تواند از 
