--- a/words.html
+++ b/words.html
@@ -1253,7 +1253,7 @@ or go through it <b>step-by-step</b>. -->
 </p>
 <p id="noise_evo_2_2_correct">
 <!-- You were correct -->
-تو درست گفتی --
+تو درست گفتی
 </p>
 <p id="noise_evo_2_2_incorrect">
 <!-- Your bet was close, but no cigar -- -->
