--- a/2.html
+++ b/2.html
@@ -163,7 +163,7 @@ twq('track','PageView');
 
 <!-- Slides -->
 <script src="js/slides/0_Slides_Intro.js?v7"></script>
-<!--<script src="js/slides/1_Slides_OneOff.js?v7"></script>-->
+<script src="js/slides/1_Slides_OneOff.js?v7"></script>
 <script src="js/slides/2_Slides_Iterated.js?v7"></script>
 <!-- <script src="js/slides/3_Slides_Tournament.js?v7"></script> -->
 <!--<script src="js/slides/4_Slides_Evolution.js?v7"></script>-->
