--- a/5.1.html
+++ b/5.1.html
@@ -167,7 +167,7 @@ twq('track','PageView');
 <!--<script src="js/slides/2_Slides_Iterated.js?v7"></script>-->
 <!-- <script src="js/slides/3_Slides_Tournament.js?v7"></script> -->
 <!--<script src="js/slides/4_Slides_Evolution.js?v7"></script>-->
-<script src="js/slides/5_Slides_Distrust.js?v7"></script>
+<script src="js/slides/5.1_Slides_Distrust.js?v7"></script>
 <!--<script src="js/slides/6_Slides_Noise.js?v7"></script>-->
 <!--<script src="js/slides/7_Slides_Sandbox.js?v7"></script>-->
 <!--<script src="js/slides/8_Slides_Conclusion.js?v7"></script>-->
