--- a/words.html
+++ b/words.html
@@ -298,6 +298,9 @@ Can you trust them? Or rather... can they trust <i>you?</i>
 (نمی‌دانی که کی دور آخر است)
 می‌توانی به آنها اعتماد کنی؟ آنها می‌توانند به تو اعتماد کنند؟
 
+به نظرتون استراتژی هر بازیکن چیه؟
+(سعی کنید استراتژی هر بازیکن رو حدس بزنین!)
+
 </p>
 
 <p id="iterated_intro_btm">
