add question to slide 4

--- a/words.html
+++ b/words.html
@@ -598,7 +598,9 @@ Note: you don't have to wait for people to literally die &amp; reproduce for cul
 all that's needed is that "unsuccessful" behaviors go away, and "successful" behaviors are imitated.
 So now... -->
 ... و تکرار کن، هر چقدر که عشقت می‌کشد.
+
 توجه: در عالم واقع لازم نیست که یک بازیکن به صورت فیزیکی حذف شود. تنها کافی است که فرهنگ تغییر کند، مثلا یک بازیکن، استراتژی ناموفقش را رها می‌کند و سعی می‌کند از استراتژی موفق پیروی کند. خوب حالا ...
+
 </p>
 <p id="evolution_intro_button">
 ... در عمل ببینیم که چه می‌شود.
@@ -753,6 +755,11 @@ a taste of their own medicine. -->
 ...
 <span class="tft">مقلدین</span> 
 وارث زمین هستند!
+
+به نظرتون چرا 
+<span class="tft">مقلد</span> 
+برنده شد؟
+
 </p>
 <p id="evo_9_all_c">
 <!-- So, although your bet was off -- the nice-but-naive <span class="all_c">Always Cooperators</span>
